[package]
name = "warp-demo"
version = "0.1.0"
authors = ["asaaki"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
#debug = true # enable for profiling

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.5", features = ["serde", "array-sizes-33-128"] }
futures = "0.3"
hyper = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-util"] }
tower-service = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"
